--- a/client/main.css
+++ b/client/main.css
@@ -1,4 +1,8 @@
 body {
-  padding: 10px;
-  font-family: sans-serif;
+    padding: 10px;
+    font-family: sans-serif;
+}
+
+.task-form {
+    margin-top: 1rem;
 }
